--- a/views/Principal.ejs
+++ b/views/Principal.ejs
@@ -8,5 +8,5 @@
 
 <%- include ('partials/footer.ejs') %>
 
-<script src="/public/jQuery/jquery.inputmask.bundle.js"></script>
-<script src="/public/jQuery/mascaras.js"></script>
+<script src="/jQuery/jquery.inputmask.bundle.js"></script>
+<script src="/jQuery/mascaras.js"></script>
