--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <!-- Mainly scripts -->
 
-    <script src="/public/jQuery/jquery-3.1.1.min.js"></script>
-    <script src="/public/bootstrap-4.5.2-dist/js/bootstrap.min.js"></script>
+    <script src="/jQuery/jquery-3.1.1.min.js"></script>
+    <script src="/bootstrap-4.5.2-dist/js/bootstrap.min.js"></script>
 </html>
