--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,14 +3,14 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Airport 22</title> 
-        <link rel="stylesheet"      type="text/css" href="/public/css/jquery-ui.css">
-        <link rel="stylesheet"      type="text/css" href="/public/css/plugins/iCheck/custom.css">
+        <link rel="stylesheet"      type="text/css" href="/css/jquery-ui.css">
+        <link rel="stylesheet"      type="text/css" href="/js/plugins/iCheck/custom.css">
         
-        <link rel="stylesheet"      type="text/css" href="/public/font-awesome/css/fontawesome.css">
-        <link rel="stylesheet"      type="text/css" href="/public/font-awesome/css/brands.css">
-        <link rel="stylesheet"      type="text/css" href="/public/font-awesome/css/solid.css">
+        <link rel="stylesheet"      type="text/css" href="/font-awesome/css/fontawesome.css">
+        <link rel="stylesheet"      type="text/css" href="/font-awesome/css/brands.css">
+        <link rel="stylesheet"      type="text/css" href="/font-awesome/css/solid.css">
 
-        <link rel="stylesheet"      type="text/css" href="/public/css/style.css">
-        <link rel="stylesheet"      type="text/css" href="/public/css/estilo.css">
-        <link rel="stylesheet"      type="text/css" href="/public/bootstrap-3.3.7/css/animate.css">
+        <link rel="stylesheet"      type="text/css" href="/css/style.css">
+        <link rel="stylesheet"      type="text/css" href="/css/estilo.css">
+        <link rel="stylesheet"      type="text/css" href="/bootstrap-3.3.7/css/animate.css">
     </head>
