--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -11,31 +11,21 @@
             <li class="nav-item active">
                 <a class="nav-link" href="../">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="../admin">Link</a>
-            </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Cadastros</a>
                 <div class="dropdown-menu" aria-labelledby="dropdownId">
-                    <a class="dropdown-item" href="/pessoas">Pessoas</a>
-                    <a class="dropdown-item" href="/eventos">Eventos</a>
+                    <a class="dropdown-item" href="/ciasAereas">Cias Aéreas</a>
+                    <a class="dropdown-item" href="/aeroportos">Aeroportos</a>
                     <a class="dropdown-item" href="/emails">Emails</a>
-                </div>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="dropdownId" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Listas</a>
-                <div class="dropdown-menu" aria-labelledby="dropdownId">
-                    <a class="dropdown-item" href="/listas/0">Roda de Cura</a>
-                    <a class="dropdown-item" href="/listas/0">Ayahuasca</a>
                 </div>
             </li>
         </ul>
     </div>
 </nav>
 
-<div style="margin-top: -35; width:100%; position:absolute; ">
+<div style="margin-top: -16; width:100%; position:absolute; ">
     <!-- Custom and plugin javascript -->
-    <script src="/public/jQuery/jquery-3.1.1.min.js"></script>
+    <script src="/jQuery/jquery-3.1.1.min.js"></script>
     
 <script>
     $('a').click(function() {
